# ChangeLog for dev-php5/ZendFramework
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.20 2007/10/06 15:41:24 gurligebis Exp $

*ZendFramework-1.0.2 (06 Oct 2007)

  06 Oct 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.0.1-r1.ebuild, +ZendFramework-1.0.2.ebuild:
  Bumping to version 1.0.2

*ZendFramework-1.0.1-r1 (10 Aug 2007)

  10 Aug 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.0.1.ebuild, +ZendFramework-1.0.1-r1.ebuild:
  Fixing MY_PV and commenting out incubator, fixing bug #188138

*ZendFramework-1.0.1 (04 Aug 2007)

  04 Aug 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.0.0.ebuild, +ZendFramework-1.0.1.ebuild:
  Bumping to version 1.0.1

*ZendFramework-1.0.0 (03 Jul 2007)

  03 Jul 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.0.0_rc3.ebuild, +ZendFramework-1.0.0.ebuild:
  Bumping to version 1.0.0

*ZendFramework-1.0.0_rc3 (28 Jun 2007)

  28 Jun 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.0.0_rc1.ebuild, +ZendFramework-1.0.0_rc3.ebuild:
  Bumping to version 1.0.0_rc3, manual and api doc has moved to seperat source
  files.

*ZendFramework-1.0.0_rc1 (06 Jun 2007)

  06 Jun 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-0.9.3.ebuild, +ZendFramework-1.0.0_rc1.ebuild:
  Version bump.

*ZendFramework-0.9.3 (15 May 2007)

  15 May 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-0.9.0.ebuild, +ZendFramework-0.9.3.ebuild:
  Version bump.

*ZendFramework-0.9.0 (18 Mar 2007)

  18 Mar 2007; Luca Longinotti <chtekk@gentoo.org> metadata.xml,
  -ZendFramework-0.8.0.ebuild, +ZendFramework-0.9.0.ebuild:
  Cleanup, version bump.

*ZendFramework-0.8.0 (25 Feb 2007)

  25 Feb 2007; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  +ZendFramework-0.8.0.ebuild:
  Version bump.
