@@ -1,14 +1,14 @@
 DIST ZendFramework-1.0.2-apidoc.tar.gz 2531725 RMD160 86695734aa42b901191f86ba09720cbfd403509c SHA1 135a6497487392adf5bd71d8092b7ca0e167a8e1 SHA256 d17c8888be02a5d42b941a0070f96d4525860cab38789727843fde37d1bdda19
 DIST ZendFramework-1.0.2-manual-en.tar.gz 587085 RMD160 8f09723c106a9b621af58e44bc4e5288a1ce0ec4 SHA1 ededafd13f1953175d158061553a774fc1325003 SHA256 167059f76a6c5bd1cd575188d2f4de15e0b2061ea4ee991131e6096eba555a74
 DIST ZendFramework-1.0.2.tar.gz 3775664 RMD160 fd4335c2907778c53fdca7a83664e1dabded8e11 SHA1 581f91bb7e32cc05ffbe9627e166d70315483b04 SHA256 37999f2387c6042397531cdb0f491a3b40a28794ca428478a317f8c6ce005aa9
-EBUILD ZendFramework-1.0.2.ebuild 1536 RMD160 3c6bb3a7e12972b2839b234c5a137830d01e2db8 SHA1 ee0bd9799a10d5a926232aca2c5998c5bdd36d80 SHA256 d9d1d78ca1d900b4e3622ddf22dc79aa4fbfcd23677a88c5e44aa99561eb9f42
-MD5 bb0ff487d3e7befc4f744feed5de984b ZendFramework-1.0.2.ebuild 1536
-RMD160 3c6bb3a7e12972b2839b234c5a137830d01e2db8 ZendFramework-1.0.2.ebuild 1536
-SHA256 d9d1d78ca1d900b4e3622ddf22dc79aa4fbfcd23677a88c5e44aa99561eb9f42 ZendFramework-1.0.2.ebuild 1536
-MISC ChangeLog 3619 RMD160 1db3fda64ec2e001350938a725eaa028abe9ca93 SHA1 aeb37e23163a5e613fc916f43c7cbd91a2b16be1 SHA256 7f6cef0f14ab37d9228b3ca684f4d558a5325c0d18470c3b9afd6f5c9ce6f313
-MD5 639938a01ef4c1badf973fc069a75af6 ChangeLog 3619
-RMD160 1db3fda64ec2e001350938a725eaa028abe9ca93 ChangeLog 3619
-SHA256 7f6cef0f14ab37d9228b3ca684f4d558a5325c0d18470c3b9afd6f5c9ce6f313 ChangeLog 3619
+EBUILD ZendFramework-1.0.2.ebuild 1403 RMD160 a9e3cfbd788d014ad1eff098e97a8d0073296c0f SHA1 e8f4ebfd017515d5f6697c20f6d14355a38e8b6c SHA256 d439ab945189a41b55d19d1476c53b3793d104f91cbadbfe4bdcc56d1bc36dcb
+MD5 67449d3c22464a7fc28c82cce469dbfb ZendFramework-1.0.2.ebuild 1403
+RMD160 a9e3cfbd788d014ad1eff098e97a8d0073296c0f ZendFramework-1.0.2.ebuild 1403
+SHA256 d439ab945189a41b55d19d1476c53b3793d104f91cbadbfe4bdcc56d1bc36dcb ZendFramework-1.0.2.ebuild 1403
+MISC ChangeLog 3791 RMD160 16ca9ec15a74998fde6f3b018a3dec6558e82d1c SHA1 6c5aa4131417207bd2a9fa3862d384cb071f2352 SHA256 ca7fe68e171fb2252256cadc29ce9ac2c5b2d19c6bfa9f24e44c12a4e2153d21
+MD5 7d84d4187e2a5d8e1bbe5e6916d1ea04 ChangeLog 3791
+RMD160 16ca9ec15a74998fde6f3b018a3dec6558e82d1c ChangeLog 3791
+SHA256 ca7fe68e171fb2252256cadc29ce9ac2c5b2d19c6bfa9f24e44c12a4e2153d21 ChangeLog 3791
 MISC metadata.xml 263 RMD160 b5db218ec7332489f7ed15f1d915ffbcabae8416 SHA1 3405c272085c754dfcfe801d1e5bb567ea8455dd SHA256 839b9d9ccf46b287166f7245776ad13532a5112eff6a44c9aa0c5cc0f82c7cc9
 MD5 41a477ae0d65b6001d9c7d0b7a720d4a metadata.xml 263
 RMD160 b5db218ec7332489f7ed15f1d915ffbcabae8416 metadata.xml 263
